--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: "Bebas Neue", sans-serif;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
 .container{
-    width: 100vw;
+    max-width: 100vw;
     height: 100vh;
     position: relative;
 }
@@ -24,7 +25,8 @@ nav{
     align-items: center;
     width: 100%;
     margin: auto;
-    background-color: rgb(61, 187, 187);
+    background-image: url(https://img.myloview.com/murals/jungle-tropical-forest-landscape-horizontal-seamless-background-for-games-apps-design-nature-woods-trees-bushes-flora-vector-700-255249091.jpg);
+    font-family: "Bebas Neue", sans-serif;
 
 }
 
@@ -53,7 +55,44 @@ li a{
 
 a{
     text-decoration: none;
+    color: #fff;
+    
+    font-weight: 400;
+    
+    /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
 }
 
-/* article style  */
+
+/* article munnar style  */
+
+.about{
+    position: relative;
+}
+
+.main-txt{
+    position: absolute;
+    top: 73%;
+    color: #fff;
+    padding-left: 14px;
+    font-size: 26px;
+}
+
+/* servies section  */
+
+#servies{
+    display: flex;
+    justify-content: space-around;
+    background-color: beige;
+    padding: 0px;
+}
+
+#servies img{
+    width: 150px;
+}
+
+figcaption{
+text-align: center;
+font-weight: 600;
+
+}
 
