--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@ nav{
     align-items: center;
     width: 100%;
     margin: auto;
-    background-image: url(https://img.myloview.com/murals/jungle-tropical-forest-landscape-horizontal-seamless-background-for-games-apps-design-nature-woods-trees-bushes-flora-vector-700-255249091.jpg);
+    /* background-image: url(https://img.myloview.com/murals/jungle-tropical-forest-landscape-horizontal-seamless-background-for-games-apps-design-nature-woods-trees-bushes-flora-vector-700-255249091.jpg); */
     font-family: "Bebas Neue", sans-serif;
+    background-color: beige;
 
 }
 
@@ -55,7 +56,7 @@ li a{
 
 a{
     text-decoration: none;
-    color: #fff;
+    color: red;
     
     font-weight: 400;
     
@@ -75,6 +76,7 @@ a{
     color: #fff;
     padding-left: 14px;
     font-size: 26px;
+    
 }
 
 /* servies section  */
@@ -94,5 +96,27 @@ figcaption{
 text-align: center;
 font-weight: 600;
 
+}
+
+/* about us section  */
+
+.about-site{
+    background-color: beige;
+}
+
+/* contact  + location */
+
+.contact{
+    display: flex;
+    justify-content: space-around;
+    background-color: beige;
+}
+
+i{
+    font-size: 40px;
+}
+
+.contact{
+    padding-top: 20px;
 }
 
