--- a/style.css
+++ b/style.css
@@ -121,3 +121,12 @@ i{
     padding-bottom: 50px;
 }
 
+/* mediaQuery */
+
+@media only screen and (min-width: 600px) {
+    .m-detail{
+        overflow: hidden;
+        font-size:18px;
+
+    }
+  }
