--- a/style.css
+++ b/style.css
@@ -79,6 +79,12 @@ a{
     
 }
 
+.m-detail {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
+
 /* servies section  */
 
 #servies{
@@ -123,10 +129,11 @@ i{
 
 /* mediaQuery */
 
-@media only screen and (min-width: 600px) {
-    .m-detail{
-        overflow: hidden;
-        font-size:18px;
-
+@media only screen and (max-width: 1100px) {
+    .m-detail {
+        visibility: hidden;
+    }
+    .m-address{
+        visibility: hidden;
     }
   }
